syntax = "proto3";

package stripe;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// TODO: Ask if message should only store the stripe ID references
service SubscriptionService {
  rpc CreateSubscription(Subscription) returns (google.protobuf.Empty) {};
}

message Subscription {
  string id = 1;
  string customerId = 2;
  string defaulyPaymentId = 3;
  repeated SubscriptionItem items = 4;
  google.protobuf.Struct data = 5;
  google.protobuf.Timestamp created = 6;
}

message SubscriptionItem {
  string id = 1;
  string subscription = 2;
  google.protobuf.Struct price = 3;
  int32 quantity = 4;
  google.protobuf.Struct data = 5;
  google.protobuf.Timestamp created = 6;
}
